<?xml version="1.0" encoding="utf-8"?>
<!--
    ~ Copyright 2023 The TensorFlow Authors. All Rights Reserved.
    ~
    ~ Licensed under the Apache License, Version 2.0 (the "License");
    ~ you may not use this file except in compliance with the License.
    ~ You may obtain a copy of the License at
    ~
    ~       http://www.apache.org/licenses/LICENSE-2.0
    ~
    ~ Unless required by applicable law or agreed to in writing, software
    ~ distributed under the License is distributed on an "AS IS" BASIS,
    ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    ~ See the License for the specific language governing permissions and
    ~ limitations under the License.
-->
<resources>
    <string name="app_name">Brawl Quest</string>

    <string name="media_pipe">MediaPipe</string>

    <string name="alt_bottom_sheet_chevron">Bottom sheet expandable indicator</string>

    <string name="alt_bottom_sheet_max_results_button_minus">Decreasing
        maximum pose results button</string>
    <string name="alt_bottom_sheet_max_results_button_plus">Increasing
        maximum pose results button</string>
    <string name="alt_bottom_sheet_threshold_button_minus">Decreasing
        threshold of pose detect results button</string>
    <string name="alt_bottom_sheet_threshold_button_plus">Increasing
        threshold of pose detect results button</string>
    <string name="menu_camera">Camera</string>
    <string name="menu_gallery">Gallery</string>
    <string name="tv_gallery_placeholder">Click + to add an image or a video
        to begin running the pose landmarker.</string>

    <string name="label_inference_time">Inference Time</string>
    <string name="label_fps">Frames per Second</string>
    <string name="label_pose_detection_confidence_threshold">Detection
        Threshold</string>
    <string name="label_pose_tracking_confidence_threshold">Tracking
        Threshold</string>
    <string name="label_pose_presence_confidence_threshold">Presence
        Threshold</string>
    <string name="label_num_poses">Number of Poses</string>
    <string name="label_delegate">Delegate</string>
    <string name="label_models">Model</string>
    <string name="back_button">" "</string>
    <string name="configuracoes_button">" "</string>
    <string name="creditos_button">" "</string>
    <string name="inventario_button">" "</string>
    <string name="loja_button">" "</string>
    <string name="maps_button">" "</string>
    <string name="missao_button">" "</string>
    <string name="status_button">" "</string>
    <string name="ajuda_button">" "</string>

    <string-array name="delegate_spinner_titles">
        <item>CPU</item>
        <item>GPU</item>
    </string-array>

    <string-array name="models_spinner_titles">
        <item>Pose Landmarker Full</item>
        <item>Pose Landmarker Lite</item>
        <item>Pose Landmarker Heavy</item>
    </string-array>
</resources>
